refactor: add toolchain and change minimum jdk version to 11