@@ -5,6 +5,7 @@ import java.nio.file.Files;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import com.google.common.flogger.FluentLogger;
 
@@ -29,19 +30,11 @@ import xyz.keksdose.spoon.code_solver.spoon.ImportAwareSniperPrinter;
 import xyz.keksdose.spoon.code_solver.spoon.ImportCleaner;
 import xyz.keksdose.spoon.code_solver.spoon.ImportComparator;
 import xyz.keksdose.spoon.code_solver.spoon.SelectiveForceImport;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertFalseEqualsCheck;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertFalseSameCheck;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertNotNullTransformation;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertNullTransformation;
 import xyz.keksdose.spoon.code_solver.transformations.junit.AssertThatTransformation;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertTrueEqualsCheck;
-import xyz.keksdose.spoon.code_solver.transformations.junit.AssertTrueSameCheck;
 import xyz.keksdose.spoon.code_solver.transformations.junit.AssertionsTransformation;
 import xyz.keksdose.spoon.code_solver.transformations.junit.ExpectedExceptionRemoval;
 import xyz.keksdose.spoon.code_solver.transformations.junit.Junit4AnnotationsTransformation;
 import xyz.keksdose.spoon.code_solver.transformations.junit.TestAnnotation;
-import xyz.keksdose.spoon.code_solver.transformations.qodana.UnusedAssignment;
-import xyz.keksdose.spoon.code_solver.transformations.qodana.UnusedLocalVariable;
 
 public class TransformationEngine {
 
@@ -78,13 +71,13 @@ public class TransformationEngine {
 		pm.addProcessor(new TestAnnotation(listener));
 		pm.addProcessor(new AssertThatTransformation(listener));
 		pm.addProcessor(new AssertionsTransformation(listener));
-		pm.addProcessor(new AssertTrueEqualsCheck(listener));
-		pm.addProcessor(new AssertFalseEqualsCheck(listener));
-		pm.addProcessor(new AssertNullTransformation(listener));
-		pm.addProcessor(new AssertNotNullTransformation(listener));
-		pm.addProcessor(new AssertTrueSameCheck(listener));
-		pm.addProcessor(new AssertFalseSameCheck(listener));
-		pm.addProcessor(new UnusedAssignment(listener));
+		// pm.addProcessor(new AssertTrueEqualsCheck(listener));
+		// pm.addProcessor(new AssertFalseEqualsCheck(listener));
+		// pm.addProcessor(new AssertNullTransformation(listener));
+		// pm.addProcessor(new AssertNotNullTransformation(listener));
+		// pm.addProcessor(new AssertTrueSameCheck(listener));
+		// pm.addProcessor(new AssertFalseSameCheck(listener));
+		// pm.addProcessor(new UnusedAssignment(listener));
 		// pm.addProcessor(new UnusedLocalVariable(listener));
 
 	}
@@ -112,7 +105,10 @@ public class TransformationEngine {
 	}
 
 	private static List<CtType<?>> getTypesWithName(String typeName, CtModel model) {
-		return model.getAllTypes().stream().filter(v -> v.getSimpleName().equals(typeName)).toList();
+		return model.getAllTypes()
+				.stream()
+				.filter(v -> v.getSimpleName().equals(typeName))
+				.collect(Collectors.toList());
 	}
 
 	protected void printChangedTypes(PrettyPrinter prettyPrinter, ChangeListener listener,
